[tool.poetry]
name = "ausdex"
version = "1.2.0"
description = "A Python package for adjusting Australian dollars for inflation"
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>", "Jonathan Garber <jonathan.garber@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rbturnbull/ausdex"
documentation = "https://rbturnbull.github.io/ausdex/"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
appdirs = "^1.4.4"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
cached-property = "^1.5.2"
python-dateutil = "^2.8.2"
typer = "^0.4.0"
modin = "^0.26.0"
importlib-metadata = "^7.0.1"
plotly = "^5.18.0"
kaleido = "0.2.1"
numpy = "^1.26.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.28.0"
pytest = "^7.4.4"
coverage = "^7.4.0"
autopep8 = "^2.0.4"
Sphinx = "^7.2.6"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^2.0.0"
pre-commit = "^3.6.0"
sphinx-copybutton = "^0.4.0"
black = "^23.12.1"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}

[tool.black]
line-length = 120
skip_string_normalization = true

[build-system]
requires = ["setuptools >= 40.6.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ausdex = 'ausdex.main:app'